tests/snapshots/assets__check_file@unit-comment-comment-convergence.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-convergence.typ
snapshot_kind: text
---
#[
  /* bar
   */
]

- /* bar
   */ 123

- /* bar
   */

- /* foo
   */

#[
  /* Somebody write this up:
  - 1000 participants.
  - 2x2 data design. */
]

#[
  // Somebody write this up:
  //  - 1000 participants.
  //  - 2x2 data design.
]
