tests/snapshots/assets__check_file@unit-comment-comment-in-array.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/comment/comment-in-array.typ
---
#(1, 2, /* 3, */ 4, 5)

#(
  // 1,
  2, (3, /* 4, */ 5, 6), 7
)

#(1, 2, // 3
  3, 4  // 5
)

#(1, 2, // 3
  3, 4  // 5
  ,
)

#(1, 2, // 3
  3, 4,  // 5
)
