tests/snapshots/assets__check_file@unit-comment-comment-in-array.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/comment/comment-in-array.typ
snapshot_kind: text
---
#(1, 2, /* 3, */ 4, 5)

#(
  // 1,
  2,
  (3, /* 4, */ 5, 6),
  7,
)

#(
  1,
  2, // 3
  3,
  4, // 5
)

#(
  1,
  2, // 3
  3,
  4, // 5
)

#(
  1,
  2, // 3
  3,
  4, // 5
)

#(
  555, // 67654
  999, /* 65543*/
  123,
  /* 65543*/
  // 454456
  /* 1 */ 546, /* 65543*/
  777, /* 65543*/
  /* 65543*/
  789,
  1445,
  654,
  /* 5 */ 666,
  777, /* 659 */
)

#(1, 2, /* */ 3)
#(1, 2, /* */ 3)
#(1, 2 /* */, 3)
#(1, 2, 3 /* */)
#(1,)
#(/* */ 1,)
#(1 /* */,)
#(1 /* */,)

#(/* */ ..(),)
#(../* */(),)
#(..() /* */,)
#(..() /* */,)
